operator/pkg/gateway-api/testdata/gateway/httproute-listener-port-matching/input/httproute-listener-port-matching.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: httproute-listener-port-matching
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
  - name: listener-1
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
    hostname: foo.com
  - name: listener-2
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
    hostname: foo.com
  - name: listener-3
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
    hostname: bar.com
  - name: listener-4
    port: 8090
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
    hostname: foo.com
  - name: listener-5
    port: 8090
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
    hostname: bar.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-v1
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: httproute-listener-port-matching
    namespace: gateway-conformance-infra
    port: 80
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-v2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: httproute-listener-port-matching
    namespace: gateway-conformance-infra
    port: 8080
  rules:
  - backendRefs:
    - name: infra-backend-v2
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-v3
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: httproute-listener-port-matching
    namespace: gateway-conformance-infra
    port: 8090
    sectionName: listener-4
  rules:
  - backendRefs:
    - name: infra-backend-v3
      port: 8080
